--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,13 @@
       color: #1b5e20;
     }
 
+    .logo span .twist {
+      color: #4caf50;
+      font-weight: 800;
+      text-shadow: 0 0 6px rgba(102, 187, 106, 0.3);
+      animation: glow 2.5s ease-in-out infinite alternate;
+    }
+
     .shop-btn {
       background-color: #66bb6a;
       color: white;
@@ -205,10 +212,10 @@
 
   <div class="section order-summary">
     <h3>Order Summary</h3>
-    <p>1 item(s) - ₱330.00</p>
+    <p>1 item(s) - ₱350.00</p>
     <p>Delivery: Free</p>
-    <p>Subtotal: ₱330.00</p>
-    <p class="total">Total: ₱330.00</p>
+    <p>Subtotal: ₱350.00</p>
+    <p class="total">Total: ₱350.00</p>
 
     <label for="discount-code">Discount code:</label>
     <input type="text" id="discount-code" placeholder="Enter discount code...">
